--- a/app/views/req_purchases/show.html.erb
+++ b/app/views/req_purchases/show.html.erb
@@ -14,39 +14,38 @@
       </ol>    
   </div>
 </div>
+
 <div class="wrapper wrapper-content animated fadeInRight">
   <div class="row">
       <div class="col-lg-12">
-          <div class="ibox float-e-margins">
-              <div class="ibox-title">
-              	<h5>Информация о заявке на закупку</h5>
-                  <div class="ibox-tools">
-                      <a class="collapse-link">
-                          <i class="fa fa-chevron-up"></i>
-                      </a>
-                      <a class="close-link">
-                          <i class="fa fa-times"></i>
-                      </a>
+        <div class="ibox float-e-margins">
+          <div class="tabs-container">
+              <ul class="nav nav-tabs">
+                  <li class="active"><a data-toggle="tab" href="#tab-1">Информация о заявке на закупку</a></li>
+                  <li class=""><a data-toggle="tab" href="#tab-2">История изменений</a></li>
+              </ul>
+              <div class="tab-content">
+                  <div id="tab-1" class="tab-pane active">
+                      <div class="panel-body">
+                        <%= render 'shared/actions_and_assignees' %>
+                        <div class="hr-line-dashed"></div>
+                        <%= simple_form_for(@req) do |f| %>
+                          <%= f.input :id, disabled: true %>      
+                          <%= f.input :state, disabled: true %>   
+                          <%= f.input :name, disabled: true %> 
+                          <%= f.input :money, disabled: true %>   
+                        <% end %>  
+                        <% if @req.is_assigned?(current_user) %>
+                          <div class="form-group">
+                            <%= link_to 'Редактировать', edit_req_purchase_path(@req), class: "btn btn-primary" %>
+                          </div> 
+                        <% end %>           
+                      </div>
                   </div>
-              </div>
-              <div class="ibox-content">
-      				<%= render 'shared/actions_and_assignees' %>
-      				<div class="hr-line-dashed"></div>
-  				    <%= simple_form_for(@req) do |f| %>
-  				      <%= f.input :id, disabled: true %>      
-  				      <%= f.input :state, disabled: true %>   
-  				      <%= f.input :name, disabled: true %> 
-  				      <%= f.input :money, disabled: true %>   
-  				    <% end %>  
-  				    <% if @req.is_assigned?(current_user) %>
-                <div class="form-group">
-                  <%= link_to 'Редактировать', edit_req_purchase_path(@req), class: "btn btn-primary" %>
-                </div> 
-              <% end %>          	
+                  <%= render 'shared/history_tab' %>
               </div>
           </div>
+        </div>
       </div>
   </div>
 </div>
-
-
