--- a/app/views/req_reassigns/edit.html.erb
+++ b/app/views/req_reassigns/edit.html.erb
@@ -30,9 +30,10 @@
                 <%= simple_form_for(@req) do |f| %>
                 <%= f.input :id, disabled: true %>
                 <%= f.input :state, disabled: true %>
+                <%= f.input :name, disabled: @req.is_disabled?("name") %> 
                 <%= f.input :client_id, collection: Client.order(:name).all, label_method: :name, value_method: :id, disabled: @req.is_disabled?("client")%>
                 <%= f.input :old_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: true %>
-                <%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: @req.is_disabled?("new_manager")  %>
+                <%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id, disabled: @req.is_disabled?("new_manager") %>
                 <%= f.input :money, disabled: @req.is_disabled?("money") %>
                 <%= f.input :info, disabled: @req.is_disabled?("info") %>
                 <div class="form-group">
