--- a/app/views/req_reassigns/new.html.erb
+++ b/app/views/req_reassigns/new.html.erb
@@ -21,6 +21,7 @@
         </div>
         <div class="ibox-content">
         	<%= simple_form_for(@req) do |f| %>
+          <%= f.input :name %>
         	<%= f.input :client_id, collection: Client.order(:name).where("manager_id = ?", current_user.id), label_method: :name, value_method: :id %>
         	<%= f.input :new_manager_id, collection: User.order(:name).all, label_method: :name, value_method: :id %>
         	<%= f.input :money %>
