improve assignment mailer template

--- a/app/views/req_mailer/new_assignment_notification.html.erb
+++ b/app/views/req_mailer/new_assignment_notification.html.erb
@@ -1,1 +1,2 @@
-<p>Новое задание было создано было создано - assignment</p>
+<p>Уважаемый <%=@assignment.user.name %>, для вас было создано новое задание: <%=@assignment.description %></p>
+<p>Чтобы посмотреть подробную информацию перейдите по ссылке - <%= link_to "перейти к заданию", @assignment.assignable %></p>
