--- a/app/assets/stylesheets/mystyle.scss
+++ b/app/assets/stylesheets/mystyle.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Assignments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.fl1 {
+	float:left;
+	margin-right: 5px;
+}
+
+.rheader{
+	padding-bottom: 10px;
+}
