--- a/app/views/req_purchases/edit.html.erb
+++ b/app/views/req_purchases/edit.html.erb
@@ -1,14 +1,4 @@
-<div class="row wrapper border-bottom white-bg page-heading">
-  <div class="col-lg-10">
-    <h2>Редактировать заявку на закупку</h2>
-      <ol class="breadcrumb">
-        <li><a href="/">Главная</a></li>
-        <li><a href="/req_purchases">Заявки на закупку</a></li>      
-        <li><%= link_to "Заявка #{@req.id}", @req %></li>          
-        <li class="active"><strong>Редактирование</strong></li>
-      </ol>    
-  </div>
-</div>
+<%= req_edit_header("Редактировать заявку на закупку", "req_purchases", "Заявки на закупку", "Заявка на закупку") %>
 <div class="wrapper wrapper-content animated fadeInRight">
   <div class="row">
       <div class="col-lg-12">
@@ -32,13 +22,7 @@
                   <%= f.input :state, disabled: true %>
                   <%= f.input :name, disabled: @req.is_disabled?("name") %>
                   <%= f.input :money, disabled: @req.is_disabled?("money") %>
-                  <div class="form-group">
-                    <%= link_to "Отмена", @req, class: "btn btn-white"%>
-                    <%= f.submit :save, class: "btn btn-primary"%>
-                    <% @req.state_events.each do |x| %>
-                     <%= f.submit x, class: "btn btn-primary"%>
-                    <% end %>
-                  </div>
+                  <%= render 'shared/req_edit_buttons', f: f %>
                 <% end %>
               </div>
           </div>
