--- a/app/views/req_workgroups/edit.html.erb
+++ b/app/views/req_workgroups/edit.html.erb
@@ -1,3 +1,4 @@
+<%= req_edit_header("Редактировать рабочую группу", "req_workgroups", "Рабочие группы", "Рабочая группа") %>
 <div class="row wrapper border-bottom white-bg page-heading">
   <div class="col-lg-10">
     <h2>Редактировать рабочую группу</h2>
@@ -57,13 +58,7 @@
                   </div>
                   <br/>
                   <div class="hr-line-dashed"></div>
-                  <div class="form-group">
-                    <%= link_to "Отмена", @req, class: "btn btn-white"%>
-                    <%= f.submit :save, class: "btn btn-primary"%>
-                    <% @req.state_events.each do |x| %>
-                     <%= f.submit x, class: "btn btn-primary"%>
-                    <% end %>
-                  </div>
+                  <%= render 'shared/req_edit_buttons', f: f %>
                 <% end %>
               </div>
           </div>
