add workgroup one leader validation

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,7 +46,7 @@
             </li>
             <li class="<%= 'active' if is_active_controller?('req_workgroups') %>">
                 <%= link_to "/req_workgroups" do %>
-                <i class="fa fa-user"></i> <span class="nav-label">Рабочие группы</span>
+                <i class="fa fa-users"></i> <span class="nav-label">Рабочие группы</span>
                 <% end %>
             </li>  
         </ul>
