--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
             <%= render 'layouts/topnavbar' %>
 
             <!-- Main view  -->
+            <%= render 'layouts/messages' %>
             <%= yield %>
 
             <!-- Footer -->
