--- a/app/views/req_purchases/show.html.erb
+++ b/app/views/req_purchases/show.html.erb
@@ -44,7 +44,11 @@
                         <div class="form-group">
                           <label><%= ReqPurchase.human_attribute_name("money") %></label>
                           <p><%= number_to_currency(@req.money, locale: :ru) %></p>
-                        </div> 
+                        </div>                         
+                        <div class="form-group">
+                          <label><%= ReqPurchase.human_attribute_name("myfile") %></label>
+                          <p><%= link_to @req.myfile_file_name, @req.myfile.url %></p>
+                        </div>
                         <% if @req.is_assigned?(current_user) %>
                           <div class="form-group">
                             <%= link_to 'Редактировать', edit_req_purchase_path(@req), class: "btn btn-primary" %>
