--- a/app/views/req_purchases/new.html.erb
+++ b/app/views/req_purchases/new.html.erb
@@ -23,10 +23,7 @@
           <%= simple_form_for(@req) do |f| %>
           <%= f.input :name %>
           <%= f.input :money %>
-          <div class="form-group">
-            <label for="req_purchase_myfile"><%= ReqPurchase.human_attribute_name("myfile") %></label>
-            <%= f.file_field :myfile %>
-          </div>
+          <%= render 'edit_file' %>
           <div class="form-group">
             <%= link_to "Отмена", @req, class: "btn btn-white"%>
             <%= f.submit :save, class: "btn btn-primary"%>
